# API_de_Notifica-o_de_Mangas

./: .env  .eslintrc.json  .gitignore  .prettierrc.json  Readme.md  cronograma.md  index.js  jest.config.js  main_v1.py  package-lock.json  package.json  pyproject.toml  requirements.txt
config/email/: Email.py
config/log/: log.py
config/notify/: Notify.py
coverage/: clover.xml
coverage/lcov-report/: index.html
db/: database.py  main.py
db/scripts/: Script_1.sql
doc/: Diagrama_Dadabase.md  drawSQL-pgsql-export-2024-11-15.sql
doc/file/: lista_mangas.csv  lista_mangas.xlsx
doc/mangas/: format_data_into_tables.py  format_files.py
front/desktop/: AddManga.py  ListMangas.py  Menu.py  desktop.py  main.py
front/web/: main.html
mangas/: mangas.csv
prisma/: index.js  schema.prisma
prisma/migrations/20220801030100_mangas_user/: migration.sql
prisma/migrations/20220907184204_init/: migration.sql
python/: api.py  main.py
scrap/: MangaBr.py  MangaOnline.py  ReadManga.py  SussyToons.py  oldiSussy.py  scrap.ipynb
src/: index.js  routes.js
src/config/log/: log.py
src/infra/db/: create_database.py  database.py
src/infra/scrap/: MangaBr.py  MangaOnline.py  ReadManga.py  SussyToons.py  VerificarStatusSite.py  scrap.py  (+1 more)
src/mangas/: mangas.controller.js  mangas.repository.js  mangas.routes.js  mangas.service.js
src/scrapping/: cheerio.js  puppeter.js  taiko.js  testeExemplos.js
src/users/: users.controller.js  users.repository.js  users.routes.js  users.service.js
test/Mangas/: MangasController.spec.js
tests/Mangas/: MangasController.spec.js
(+7 files in other folders)
