[project]
name = "api-de-notifica-o-de-mangas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "odfpy>=1.4.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "unidecode>=1.4.0",
    "uvicorn>=0.46.0",
]
